2021-04-28  Omar Polo  <op@omarpolo.com>

	* gmid.c (main): pidfile support with `-P pidfile'

2021-04-27  Omar Polo  <op@omarpolo.com>

	* parse.y (servopt): added ``env'' option to define environment vars for CGI scripts

	* log.c (fatal): lower the log priority for fatal errors from CRIT to ERR

2021-04-25  Omar Polo  <op@omarpolo.com>

	* server.c (open_dir): sort the auto index alphabetically

2021-04-21  Omar Polo  <op@omarpolo.com>

	* mime.c (load_default_mime): use `text/x-patch' for .patch and .diff files

2021-04-14  Omar Polo  <op@omarpolo.com>

	* log.c (handle_imsg_log): print the datetime when logging to stderr

2021-04-13  Omar Polo  <op@omarpolo.com>

	* ex.c (launch_cgi): define TLS_VERSION, TLS_CIPHER and TLS_CIPHER_STRENGTH for CGI scripts

2021-04-12  Omar Polo  <op@omarpolo.com>

	* 1.6.1 tagged

	* iri.c (path_clean): fix possible infinite loop in the IRI parsing code.

2021-03-31  Omar Polo  <op@omarpolo.com>

	* gmid.h (struct vhost): remove limits on the number of vhosts and location blocks

	* gmid.c (mkdirs): fix recursive mkdirs for configless mode

2021-03-29  Omar Polo  <op@omarpolo.com>

	* Makefile (static): fixed `static' target

2021-03-29  kornellapacz @ github

	* Dockerfile: add missing libevent-dev dependency, thanks!

2021-03-27  Omar Polo  <op@omarpolo.com>

	* gmid.h (struct client): correctly handle CGI scripts that replies with the maximum header length allowed

2021-03-20  Omar Polo  <op@omarpolo.com>

	* 1.6 tagged

	* sandbox.c (sandbox_logger_process): add capsicum to the logger process

2021-03-19  Omar Polo  <op@omarpolo.com>

	* gmid.c (main): use imsg for all IPC; only the main process
	listens for SIGHUP: this means that finally the config reload will
	work with OpenBSD' rc (and probably other service manager too)

2021-02-22  Omar Polo  <op@omarpolo.com>

	* log.c (log_request): add `log on/off' to enable/disable logs per-server or per-location

2021-02-09  Omar Polo  <op@omarpolo.com>
