@@ -1,3 +1,7 @@
+2021-04-29  Omar Polo  <op@omarpolo.com>
+
+	* parse.y (servopt): added ``alias'' option to define hostname aliases for a server
+
 2021-04-28  Omar Polo  <op@omarpolo.com>
 
 	* gmid.c (main): pidfile support with `-P pidfile'
